@@ -2,7 +2,6 @@ conda install -c conda-forge dill
 conda install -c conda-forge imageio
 conda install -c conda-forge imageio-ffmpeg
 conda install -c conda-forge matplotlib
-conda install -c conda-forge mkl
 conda install -c conda-forge numpy
 conda install -c conda-forge openpyxl
 conda install -c conda-forge psutil
