@@ -1,7 +1,6 @@
 dill
 imageio
 matplotlib
-mkl
 numpy
 openpyxl
 psutil
